--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ python-dotenv==1.0.0
 pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.3
+setuptools==80.3.1
 six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.2
