--- a/.gitignore
+++ b/.gitignore
@@ -27,26 +27,40 @@ db.sqlite3
 db.sqlite3-journal
 media/
 static/
+staticfiles/
+.env.local
+.env.development
+.env.production
 
 # Frontend
-frontend/node_modules/
-frontend/.pnp
-frontend/.pnp.js
-frontend/coverage
-frontend/.next/
-frontend/out/
-frontend/build/
-frontend/dist/
-frontend/.env.local
-frontend/.env.development.local
-frontend/.env.test.local
-frontend/.env.production.local
-frontend/npm-debug.log*
-frontend/yarn-debug.log*
-frontend/yarn-error.log*
+node_modules/
+/frontend/node_modules/
+/frontend/.pnp
+/frontend/.pnp.js
+/frontend/coverage
+/frontend/.next/
+/frontend/out/
+/frontend/build/
+/frontend/dist/
+/frontend/.env.local
+/frontend/.env.development.local
+/frontend/.env.test.local
+/frontend/.env.production.local
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log*
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Environnement virtuel
 venv/
+virtualenv/
 ENV/
 .env
 .venv
@@ -63,7 +77,6 @@ ENV/
 *.iml
 *.iws
 *.ipr
-*.iws
 .idea_modules/
 
 # Autres
@@ -74,8 +87,33 @@ htmlcov/
 .pytest_cache/
 .tox/
 .hypothesis/
+.nyc_output
+coverage/
 
 # Fichiers de sauvegarde
 *~
 *.swp
-*.swo 
+*.swo
+*.bak
+*.tmp
+*.temp
+
+# Dossiers spécifiques
+/backend/media/
+/backend/static/
+/backend/staticfiles/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Cache
+.cache/
+.parcel-cache/
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/ 
