--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.5"
