--- a/env.sample
+++ b/env.sample
@@ -14,4 +14,9 @@ CLOUDINARY_API_SECRET=votre_api_secret
 # PostgreSQL (pour docker-compose)
 POSTGRES_PASSWORD=postgres
 POSTGRES_USER=postgres
-POSTGRES_DB=jaelleshop 
+POSTGRES_DB=jaelleshop
+
+# Build settings
+NODE_OPTIONS=--max_old_space_size=512
+PIP_NO_CACHE_DIR=true
+PYTHONUNBUFFERED=1 
