--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,5 +17,8 @@ ENV DEBUG=False
 # Exposer le port
 EXPOSE 8000
 
+# Créer les répertoires nécessaires pour les volumes
+RUN mkdir -p /app/static /app/media && chmod -R 755 /app/static /app/media
+
 # Commande de démarrage
 CMD ["sh", "-c", "python manage.py migrate && python manage.py collectstatic --noinput && gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:8000"]
