Résumé des étapes pour déployer votre application complète sur Railway Nous avons effectué les modifications suivantes: Backend: Amélioration du Dockerfile pour gérer les connexions à PostgreSQL Ajout d'un script de démarrage qui attend que PostgreSQL soit disponible Amélioration des logs et des vérifications de santé Frontend: Création d'une configuration Railway pour le frontend Modification de la configuration Nginx pour utiliser l'URL du backend sur Railway Ajout de variables d'environnement et d'un script de remplacement Documentation: Création d'un guide détaillé (RAILWAY_DEPLOYMENT.md) expliquant le processus de déploiement Prochaines étapes:
Résumé des étapes pour déployer votre application complète sur Railway
Nous avons effectué les modifications suivantes:
Backend:
Amélioration du Dockerfile pour gérer les connexions à PostgreSQL
Ajout d'un script de démarrage qui attend que PostgreSQL soit disponible
Amélioration des logs et des vérifications de santé
Frontend:
Création d'une configuration Railway pour le frontend
Modification de la configuration Nginx pour utiliser l'URL du backend sur Railway
Ajout de variables d'environnement et d'un script de remplacement
Documentation:
Création d'un guide détaillé (RAILWAY_DEPLOYMENT.md) expliquant le processus de déploiement
Prochaines étapes:

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -27,18 +27,36 @@ server {
         add_header Cache-Control "public, no-transform";
     }
 
-    # Proxy vers l'API Django
+    # Proxy vers l'API Django sur Railway
     location /api/ {
-        proxy_pass http://backend:8000;
+        # Utilisez une variable d'environnement pour l'URL du backend
+        # Cette variable sera définie dans Railway
+        set $backend_url ${BACKEND_URL};
+        
+        # Si la variable n'est pas définie, utilisez une URL par défaut (pour le développement local)
+        if ($backend_url = "") {
+            set $backend_url "https://evimeria-production.up.railway.app";
+        }
+        
+        proxy_pass $backend_url;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Gérer les CORS
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
     }
 
     # Proxy vers l'API Django admin
     location /admin/ {
-        proxy_pass http://backend:8000;
+        set $backend_url ${BACKEND_URL};
+        if ($backend_url = "") {
+            set $backend_url "https://evimeria-production.up.railway.app";
+        }
+        proxy_pass $backend_url;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -47,7 +65,11 @@ server {
 
     # Proxy vers les médias de Django
     location /media/ {
-        proxy_pass http://backend:8000;
+        set $backend_url ${BACKEND_URL};
+        if ($backend_url = "") {
+            set $backend_url "https://evimeria-production.up.railway.app";
+        }
+        proxy_pass $backend_url;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -56,7 +78,11 @@ server {
 
     # Proxy vers les fichiers statiques de Django
     location /static/ {
-        proxy_pass http://backend:8000;
+        set $backend_url ${BACKEND_URL};
+        if ($backend_url = "") {
+            set $backend_url "https://evimeria-production.up.railway.app";
+        }
+        proxy_pass $backend_url;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
