Parfait ! Le point d'entrée /health/ est déjà configuré. Résumé des modifications Voici un résumé des modifications apportées pour simplifier le déploiement: 1. Backend Dockerfile simplifié avec un script de démarrage clair railway.json optimisé avec healthcheck Configuration PostgreSQL prête à l'emploi 2. Frontend Dockerfile simplifié avec build en deux étapes Configuration Nginx optimisée avec variable de substitution pour le backend railway.json avec healthcheck 3. Documentation Guide de déploiement clair et détaillé en français Instructions pour déployer Base de données PostgreSQL: Récupérez les variables d'environnement de la base de données PostgreSQL existante Vous pourrez les réutiliser pour le backend Backend: Déployez le dossier backend sur Railway avec les variables d'environnement mentionnées Attendez le déploiement complet et notez l'URL générée Frontend: Déployez le dossier frontend sur Railway Configurez BACKEND_URL avec l'URL du backend Générez une URL publique pour y accéder Cette configuration est beaucoup plus simple et robuste que les tentatives précédentes, avec moins de points d'échec possibles. Les fichiers Docker et Railway sont optimisés pour un déploiement fluide.
Parfait ! Le point d'entrée /health/ est déjà configuré.
Résumé des modifications
Voici un résumé des modifications apportées pour simplifier le déploiement:
1. Backend
Dockerfile simplifié avec un script de démarrage clair
railway.json optimisé avec healthcheck
Configuration PostgreSQL prête à l'emploi
2. Frontend
Dockerfile simplifié avec build en deux étapes
Configuration Nginx optimisée avec variable de substitution pour le backend
railway.json avec healthcheck
3. Documentation
Guide de déploiement clair et détaillé en français
Instructions pour déployer
Base de données PostgreSQL:
Récupérez les variables d'environnement de la base de données PostgreSQL existante
Vous pourrez les réutiliser pour le backend
Backend:
Déployez le dossier backend sur Railway avec les variables d'e

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,23 +2,38 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Installer les dépendances
+# Installer les outils nécessaires
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    postgresql-client \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copier et installer les dépendances
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copier le code source
 COPY . .
 
+# Collectstatic (avant le démarrage pour optimiser)
+RUN python manage.py collectstatic --noinput
+
 # Variables d'environnement
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
-ENV DEBUG=False
+ENV PORT=8000
 
 # Exposer le port
 EXPOSE 8000
 
-# Créer les répertoires nécessaires pour les volumes
-RUN mkdir -p /app/static /app/media && chmod -R 755 /app/static /app/media
+# Script de démarrage
+RUN echo '#!/bin/bash \n\
+echo "Démarrage de EVIMERIA sur Railway..." \n\
+echo "Exécution des migrations..." \n\
+python manage.py migrate --noinput \n\
+echo "Démarrage du serveur..." \n\
+gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT --log-level info \n\
+' > /app/start.sh && chmod +x /app/start.sh
 
-# Commande de démarrage
-CMD ["sh", "-c", "python manage.py migrate && python manage.py collectstatic --noinput && gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:8000"]
+# Démarrer l'application
+CMD ["/app/start.sh"]
