--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,88 +4,37 @@ server {
 
     # Compression gzip
     gzip on;
-    gzip_disable "msie6";
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_min_length 256;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
+    gzip_types text/plain text/css application/json application/javascript;
 
     # Fichiers statiques
     location / {
         root /usr/share/nginx/html;
-        index index.html index.htm;
+        index index.html;
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache pour les assets statiques
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        root /usr/share/nginx/html;
-        expires 30d;
-        add_header Cache-Control "public, no-transform";
-    }
-
-    # Proxy vers l'API Django sur Railway
+    # Proxy pour l'API backend
     location /api/ {
-        # Utilisez une variable d'environnement pour l'URL du backend
-        # Cette variable sera définie dans Railway
-        set $backend_url ${BACKEND_URL};
-        
-        # Si la variable n'est pas définie, utilisez une URL par défaut (pour le développement local)
-        if ($backend_url = "") {
-            set $backend_url "https://evimeria-production.up.railway.app";
-        }
-        
-        proxy_pass $backend_url;
+        proxy_pass __BACKEND_URL__;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Gérer les CORS
+        # CORS headers
         add_header 'Access-Control-Allow-Origin' '*';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
         add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
     }
 
-    # Proxy vers l'API Django admin
+    # Proxy pour l'admin Django
     location /admin/ {
-        set $backend_url ${BACKEND_URL};
-        if ($backend_url = "") {
-            set $backend_url "https://evimeria-production.up.railway.app";
-        }
-        proxy_pass $backend_url;
+        proxy_pass __BACKEND_URL__;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Proxy vers les médias de Django
-    location /media/ {
-        set $backend_url ${BACKEND_URL};
-        if ($backend_url = "") {
-            set $backend_url "https://evimeria-production.up.railway.app";
-        }
-        proxy_pass $backend_url;
+    # Proxy pour les fichiers statiques et médias
+    location ~ ^/(static|media)/ {
+        proxy_pass __BACKEND_URL__;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Proxy vers les fichiers statiques de Django
-    location /static/ {
-        set $backend_url ${BACKEND_URL};
-        if ($backend_url = "") {
-            set $backend_url "https://evimeria-production.up.railway.app";
-        }
-        proxy_pass $backend_url;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
