--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,30 +10,23 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 # Copier et installer les dépendances
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt gunicorn psycopg2-binary dj-database-url whitenoise
 
 # Copier le code source
 COPY . .
-
-# Collectstatic (avant le démarrage pour optimiser)
-RUN python manage.py collectstatic --noinput
 
 # Variables d'environnement
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 ENV PORT=8000
+ENV DJANGO_ALLOWED_HOSTS=*.up.railway.app,*.railway.app,localhost,127.0.0.1,0.0.0.0
+ENV ALLOWED_HOSTS=*.up.railway.app,*.railway.app,localhost,127.0.0.1,0.0.0.0
+
+# Collectstatic (avant le démarrage pour optimiser)
+RUN python manage.py collectstatic --noinput
 
 # Exposer le port
 EXPOSE 8000
 
-# Script de démarrage
-RUN echo '#!/bin/bash \n\
-echo "Démarrage de EVIMERIA sur Railway..." \n\
-echo "Exécution des migrations..." \n\
-python manage.py migrate --noinput \n\
-echo "Démarrage du serveur..." \n\
-gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT --log-level info \n\
-' > /app/start.sh && chmod +x /app/start.sh
-
-# Démarrer l'application
-CMD ["/app/start.sh"]
+# Commande de démarrage simplifiée
+CMD python manage.py migrate && gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT --log-level debug
