Ces modifications devraient résoudre le problème principal d'erreur 502 lors du déploiement sur Railway. Voici les changements que j'ai apportés: Ajout explicite de la variable d'environnement DJANGO_SETTINGS_MODULE dans tous les fichiers de configuration Création d'un fichier WSGI spécifique pour Railway qui définit clairement le module de paramètres Mise à jour du script de démarrage pour afficher plus d'informations de débogage Amélioration des configurations healthcheck dans le fichier .railway.toml Simplification de l'approche pour s'assurer que Gunicorn démarre correctement Pour déployer ces modifications sur Railway: Commitez tous les changements sur votre dépôt Git Poussez ces changements vers GitHub Déclenchez un nouveau déploiement sur Railway
Ces modifications devraient résoudre le problème principal d'erreur 502 lors du déploiement sur Railway. Voici les changements que j'ai apportés:
Ajout explicite de la variable d'environnement DJANGO_SETTINGS_MODULE dans tous les fichiers de configuration
Création d'un fichier WSGI spécifique pour Railway qui définit clairement le module de paramètres
Mise à jour du script de démarrage pour afficher plus d'informations de débogage
Amélioration des configurations healthcheck dans le fichier .railway.toml
Simplification de l'approche pour s'assurer que Gunicorn démarre correctement
Pour déployer ces modifications sur Railway:
Commitez tous les changements sur votre dépôt Git
Poussez ces changements vers GitHub
Déclenchez un nouveau déploiement sur Railway

--- a/.railway.toml
+++ b/.railway.toml
@@ -1,17 +1,19 @@
 [build]
 builder = "DOCKERFILE"
+dockerfilePath = "./Dockerfile"
 
 [deploy]
 numReplicas = 1
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
+healthcheckPath = "/health/"
+healthcheckTimeout = 10
+healthcheckInterval = 30
 
 [service]
 internal_port = 8000
-auto_healthcheck = false # Désactiver l'healthcheck auto de Railway
+auto_healthcheck = true
 
-[service.healthcheck]
-path = "/health/"
-interval = "30s"
-timeout = "10s"
-retries = 3 
+[env]
+DJANGO_SETTINGS_MODULE = "jaelleshop.settings"
+PORT = "8000" 
