--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,12 +17,19 @@ COPY . .
 # Variables d'environnement essentielles
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
+ENV DJANGO_SETTINGS_MODULE=jaelleshop.settings
+ENV PORT=8000
 
 # Exécution pre-démarrage
 RUN python manage.py collectstatic --noinput
 
 # Exposer le port
 EXPOSE 8000
+EXPOSE ${PORT}
+
+# Script de démarrage simplifié
+RUN echo '#!/bin/bash\necho "DJANGO_SETTINGS_MODULE=$DJANGO_SETTINGS_MODULE"\necho "APPLICATION_WSGI=railway_wsgi"\necho "PORT=$PORT"\npython manage.py migrate\necho "Démarrage de Gunicorn..."\nexec gunicorn railway_wsgi:application --bind 0.0.0.0:${PORT:-8000} --log-level debug' > /app/start.sh
+RUN chmod +x /app/start.sh
 
 # Commande de démarrage (simple)
-CMD python manage.py migrate && gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:${PORT:-8000}
+CMD ["/app/start.sh"]
