--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT --log-level debug 
+web: gunicorn --env DJANGO_SETTINGS_MODULE=jaelleshop.settings railway_wsgi:application --bind 0.0.0.0:$PORT --log-level debug 
