Voilà, j'ai apporté plusieurs modifications importantes pour résoudre les problèmes de déploiement: J'ai créé un script db_check.py propre qui vérifie correctement la connexion à la base de données sans provoquer d'erreurs d'indentation. J'ai également créé un script show_urls.py pour afficher les URLs disponibles. J'ai mis à jour create_superuser.py pour le rendre plus robuste et configurable. J'ai amélioré le fichier settings.py pour une meilleure gestion de la connexion à la base de données avec affichage de log. J'ai corrigé l'ordre du middleware WhiteNoise, qui doit être placé juste après le middleware de sécurité. J'ai mis à jour le Dockerfile pour utiliser ces scripts de manière plus fiable. Ces modifications devraient résoudre les problèmes d'erreur 502 que vous rencontrez en: Assurant une configuration correcte des paramètres Django (DJANGO_SETTINGS_MODULE) Vérifiant et gérant mieux la connexion à la base de données Améliorant la robustesse du processus de démarrage Fournissant plus d'informations de débogage dans les logs Pour déployer ces modifications: Commitez tous les changements dans votre dépôt Git Poussez-les vers GitHub Déclenchez un nouveau déploiement sur Railway Ces modifications devraient rendre votre application EVIMERIA accessible sur Railway.
Voilà, j'ai apporté plusieurs modifications importantes pour résoudre les problèmes de déploiement:
J'ai créé un script db_check.py propre qui vérifie correctement la connexion à la base de données sans provoquer d'erreurs d'indentation.
J'ai également créé un script show_urls.py pour afficher les URLs disponibles.
J'ai mis à jour create_superuser.py pour le rendre plus robuste et configurable.
J'ai amélioré le fichier settings.py pour une meilleure gestion de la connexion à la base de données avec affichage de log.
J'ai corrigé l'ordre du middleware WhiteNoise, qui doit être placé juste après le middleware de sécurité.
J'ai mis à jour le Dockerfile pour utiliser ces scripts de manière plus fiable.
Ces 

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -27,9 +27,41 @@ RUN python manage.py collectstatic --noinput
 EXPOSE 8000
 EXPOSE ${PORT}
 
+# S'assurer que les scripts sont exécutables
+RUN chmod +x /app/db_check.py
+RUN chmod +x /app/create_superuser.py
+RUN chmod +x /app/show_urls.py
+
 # Script de démarrage simplifié
-RUN echo '#!/bin/bash\necho "DJANGO_SETTINGS_MODULE=$DJANGO_SETTINGS_MODULE"\necho "APPLICATION_WSGI=railway_wsgi"\necho "PORT=$PORT"\npython manage.py migrate\necho "Démarrage de Gunicorn..."\nexec gunicorn railway_wsgi:application --bind 0.0.0.0:${PORT:-8000} --log-level debug' > /app/start.sh
+RUN echo '#!/bin/bash\n\
+echo "==== DÉMARRAGE DE EVIMERIA (BACKEND) ===="\n\
+echo "DJANGO_SETTINGS_MODULE=$DJANGO_SETTINGS_MODULE"\n\
+echo "PORT=$PORT"\n\
+\n\
+# Attendre que la base de données soit disponible\n\
+if [ -n "$DATABASE_URL" ]; then\n\
+  echo "Vérification de la connexion à la base de données..."\n\
+  python /app/db_check.py || echo "Connexion à la base de données échouée, mais on continue..."\n\
+else\n\
+  echo "Aucune variable DATABASE_URL trouvée"\n\
+fi\n\
+\n\
+# Exécuter les migrations\n\
+echo "Exécution des migrations..."\n\
+python manage.py migrate --noinput\n\
+\n\
+# Créer un superutilisateur si nécessaire\n\
+echo "Création du superutilisateur..."\n\
+python /app/create_superuser.py\n\
+\n\
+# Vérifier les endpoints disponibles\n\
+echo "Endpoints disponibles:"\n\
+python /app/show_urls.py\n\
+\n\
+# Démarrer Gunicorn\n\
+echo "Démarrage de Gunicorn sur le port ${PORT:-8000}..."\n\
+exec gunicorn railway_wsgi:application --bind 0.0.0.0:${PORT:-8000} --log-level debug\n' > /app/start.sh
 RUN chmod +x /app/start.sh
 
-# Commande de démarrage (simple)
+# Commande de démarrage
 CMD ["/app/start.sh"]
