--- a/.railway.toml
+++ b/.railway.toml
@@ -5,8 +5,8 @@ dockerfilePath = "./Dockerfile"
 [deploy]
 numReplicas = 1
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 3
-healthcheckPath = "/health/"
+restartPolicyMaxRetries = 5
+healthcheckPath = "/test/"
 healthcheckTimeout = 10
 healthcheckInterval = 30
 
