--- a/.railway.toml
+++ b/.railway.toml
@@ -5,14 +5,11 @@ dockerfilePath = "./Dockerfile"
 [deploy]
 numReplicas = 1
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 5
-healthcheckPath = "/test/"
-healthcheckTimeout = 10
-healthcheckInterval = 30
+restartPolicyMaxRetries = 3
 
 [service]
 internal_port = 8000
-auto_healthcheck = true
+auto_healthcheck = false
 
 [env]
 DJANGO_SETTINGS_MODULE = "jaelleshop.settings"
