Ces modifications radicales devraient résoudre les problèmes persistants: Simplification complète de l'approche: Un script d'entrée simple et explicite Utilisation directe des commandes Django sans intermédiaires complexes Script de vérification de santé indépendant Dockerfile minimaliste: Suppression de tous les scripts complexes précédents Utilisation d'un modèle standard et éprouvé Configuration Railway minimaliste: Désactivation des healthchecks automatiques qui peuvent causer des problèmes Utilisation d'une seule commande de démarrage explicite Éviter les indentations problématiques: Scripts Python avec syntaxe simplifiée Utilisation de try/except clairs qui évitent les problèmes d'indentation Vue de test améliorée: Retourne plus d'informations de diagnostic Permet de voir si les variables d'environnement sont correctement définies L'approche consiste à avoir un processus de démarrage simple et robuste qui permet de voir clairement où se situent les problèmes.
Ces modifications radicales devraient résoudre les problèmes persistants:
Simplification complète de l'approche:
Un script d'entrée simple et explicite
Utilisation directe des commandes Django sans intermédiaires complexes
Script de vérification de santé indépendant
Dockerfile minimaliste:
Suppression de tous les scripts complexes précédents
Utilisation d'un modèle standard et éprouvé
Configuration Railway minimaliste:
Désactivation des healthchecks automatiques qui peuvent causer des problèmes
Utilisation d'une seule commande de démarrage explicite
Éviter les indentations problématiques:
Scripts Python avec syntaxe simplifiée
Utilisation de try/except clairs qui évitent les problèmes d'indentation
Vue de test améliorée:
Retourne plus d'informations de diagnostic
Permet de voir si les variables d'environnement sont correctement définies
L'approche consiste à avoir un processus de démarrage simple et robuste qui permet de voir clairement où se situent les problèmes.

--- a/.railway.toml
+++ b/.railway.toml
@@ -3,9 +3,8 @@ builder = "DOCKERFILE"
 dockerfilePath = "./Dockerfile"
 
 [deploy]
-numReplicas = 1
+startCommand = "sh backend/railway_entrypoint.sh"
 restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 3
 
 [service]
 internal_port = 8000
