Voilà! J'ai apporté les modifications nécessaires pour éviter complètement l'utilisation de Docker dans le déploiement Railway: J'ai ajouté provider = "nixpacks" et noDocker = true dans la section [deploy] du fichier railway.toml pour indiquer explicitement à Railway de ne pas utiliser Docker. Le workflow GitHub Actions a déjà été modifié pour supprimer toutes les étapes liées à Docker. Maintenant, lorsque vous déployez, Railway utilisera directement nixpacks pour construire et exécuter votre application sans recourir à Docker, ce qui évitera l'erreur "Username and password required" que vous avez rencontrée.
Voilà! J'ai apporté les modifications nécessaires pour éviter complètement l'utilisation de Docker dans le déploiement Railway:
J'ai ajouté provider = "nixpacks" et noDocker = true dans la section [deploy] du fichier railway.toml pour indiquer explicitement à Railway de ne pas utiliser Docker.
Le workflow GitHub Actions a déjà été modifié pour supprimer toutes les étapes liées à Docker.
Maintenant, lorsque vous déployez, Railway utilisera directement nixpacks pour construire et exécuter votre application sans recourir à Docker, ce qui évitera l'erreur "Username and password required" que vous avez rencontrée.

--- a/railway.toml
+++ b/railway.toml
@@ -7,6 +7,8 @@ startCommand = "cd backend && gunicorn jaelleshop.wsgi:application --bind 0.0.0.
 healthcheckPath = "/"
 healthcheckTimeout = 300
 restartPolicyType = "on-failure"
+provider = "nixpacks"
+noDocker = true
 
 [phases.setup]
 nixPkgs = ["python3", "postgresql", "gcc"]
